--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "ghpages": "ng build --prod --build-optimizer --aot --no-progress --baseHref='/travis-build-and-deploy-test/'"
   },
   "private": true,
   "dependencies": {
